Final update to Stat. Hypothesis section.

--- a/Math Stat/4_ms_hypothesis.ipynb
+++ b/Math Stat/4_ms_hypothesis.ipynb
@@ -652,13 +652,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Дополнительные примеры решения задач со Stepic.\n",
+    "\n",
+    "** Задача о днях рождениях**\n",
+    "\n",
+    "Существует предположение о том, что предвкушение дня рождения продлевает жизнь. \n",
+    "Для того, чтобы проверить данное предположение статистически воспользуемся данными некрологов, опубликованных в Солт-Лейк-Сити в 1975 года. \n",
+    "Согласно этим данным только 60 из 747 человек скончались в течение трехмесячного периода, предшествующего их дни рождения. \n",
+    "\n",
+    "Подтверждают ли эти данные предположение?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 162.444], H1\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 0.02\n",
+    "p0 = 0.25\n",
+    "m = 60.\n",
+    "n = 747.\n",
+    "\n",
+    "z = (m/n - p0) * np.sqrt(n) / np.sqrt(p0*(1.-p0))\n",
+    "# Turn critical value to number of success\n",
+    "Z = z * np.sqrt(n*p0*(1.-p0))+n*p0\n",
+    "\n",
+    "ur = st.norm.ppf(alpha)\n",
+    "# Turn right boundary of critical value to the number of success\n",
+    "UR = ul*np.sqrt(n*p0*(1.-p0))+n*p0\n",
+    "\n",
+    "if Z < UR:\n",
+    "    print('[0, {:.3f}], H1'.format(UR))\n",
+    "else:\n",
+    "    print('[0, {:.3f}], H0'.format(UR))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Задача про размер мозга женщины**\n",
+    "\n",
+    "Правда ли, что вес мозга взрослого мужчины в среднем больше, чем вес мозга взрослой женщины? \n",
+    "Средний вес мозга женщины составляет 1222гр.\n",
+    "\n",
+    "Проверьте данную гипотезу при уровне значимости $\\alpha$ = 0.03 по предложенной выборке:\n",
+    "\\begin{equation*}\n",
+    "X_{n} = [1380, 1344, 1356, 1291, 1308, 1271, 1371, 1430, 1381, 1457, 1492, \\\\\n",
+    "1240, 1256, 1466, 1214, 1448, 1510, 1395, 1507, 1264, 1293, 1251, 1380, 1386, \\\\\n",
+    "1411, 1434, 1302, 1529, 1352, 1494, 1348, 1464, 1286, 1345, 1491, 1259, 1541, 1214, 1310, 1286]\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Найдите выборочное значение статистики критерия.\n",
+    "\n",
+    "Найдите p-значение и примите статистическое решение\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z = 9.855\n",
+      "N = 39.0\n",
+      "0.00, H1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a0 = 1222.\n",
+    "alpha = 0.02\n",
+    "x = np.array([1380, 1344, 1356, 1291, 1308, 1271, 1371, 1430, 1381, 1457, \\\n",
+    "              1492, 1240, 1256, 1466, 1214, 1448, 1510, 1395, 1507, 1264, \\\n",
+    "              1293, 1251, 1380, 1386, 1411, 1434, 1302, 1529, 1352, 1494, 1348, \\\n",
+    "              1464, 1286, 1345, 1491, 1259, 1541, 1214, 1310, 1286], dtype = float)\n",
+    "n = float(x.shape[0])\n",
+    "x_ = np.mean(x)\n",
+    "\n",
+    "def std(x, x_):\n",
+    "    return np.sqrt( np.sum( (x - x_)**2 ) / (n - 1) )\n",
+    "\n",
+    "s = std(x, x_)\n",
+    "z = (x_ - a0) * np.sqrt(n) / s\n",
+    "\n",
+    "# Task 1\n",
+    "print('z = {:.3f}'.format(z))\n",
+    "# Task 2\n",
+    "print('N = {0}'.format(n - 1))\n",
+    "# Task 3 (Because H1 a > a0)\n",
+    "p_val = 1. - st.t.cdf(z, n - 1)\n",
+    "\n",
+    "if (p_val < alpha):\n",
+    "    print('{:.2f}, H1'.format(p_val))\n",
+    "else:\n",
+    "    print('{:.2f}, H0'.format(p_val))"
+   ]
   }
  ],
  "metadata": {
