MS: solution of tasks from Fadeeva, Lebedev book on stat hypothesis

--- a/Math Stat/4_ms_hypothesis.ipynb
+++ b/Math Stat/4_ms_hypothesis.ipynb
@@ -605,7 +605,7 @@
     "ax.fill_between(not_Vk, normal_distribution(not_Vk, mu_h0, sigma), color = 'C2', alpha = 0.5, label = r'1 - $\\alpha$')\n",
     "\n",
     "ax.plot(x_, normal_distribution(x_, mu_h1, sigma), 'k', label = r'Distribution $H_{1}$~$N(4, 4)$')\n",
-    "ax.fill_between(not_Vk, normal_distribution(not_Vk, mu_h1, sigma), color = 'C1', alpha = 0.5, label = r'Type II error$\\beta$')\n",
+    "ax.fill_between(not_Vk, normal_distribution(not_Vk, mu_h1, sigma), color = 'C1', alpha = 0.5, label = r'Type II error $\\beta$')\n",
     "ax.fill_between(Vk, normal_distribution(Vk, mu_h1, sigma), color = 'C0', alpha = 0.5, label = r'Stat Power 1-$\\beta$')\n",
     "\n",
     "ax.axvspan(z_crit, 1.01 * z_crit, alpha=0.5, color='k')\n",
@@ -618,6 +618,50 @@
     "ax.legend(handles, labels)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Нахождение ошибки I рода.\n",
+    "\n",
+    "При отлаженном процессе наполнения тюбиков с зубной пастой в одну упаковку в среднем помещается 100 мл зубной пасты, при этом дисперсия объема зубной пасты в упаковке не должна превышать 9 (мл в квадрате). Отдел контроля качества отобрал 25 упаковок и рассчитал несмещённую оценку дисперсии s2, она составила 13.5.\n",
+    "\n",
+    "Есть ли основания считать, что дисперсия объема зубной пасты превышает допустимый предел? Используйте уровень значимости 0.05. Предполагается, что объем зубной пасты в упаковке подчиняется нормальному закону распределения.\n",
+    "\n",
+    "Чему равна вероятность ошибки 1го рода?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alpha = 0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "s2 = 13.5\n",
+    "D = 9.\n",
+    "n = 25.\n",
+    "alpha = 0.05\n",
+    "\n",
+    "# Находим критическое значение статистики с ЗАДАННЫМ уровнем доверия\n",
+    "z = st.chi2.ppf(1. - alpha, n-1)\n",
+    "# Вычисляем критическое значение дисперсии при ЗАДАНОМ уровне доверия\n",
+    "s_2 = z * D / (n - 1.)\n",
+    "\n",
+    "# Находим значение статистики по ВЫЧЕСЛЕННОМУ КРИТИЧЕСКОМУ значению выборочной дисперсии\n",
+    "Z = (n - 1) * s_2 / D\n",
+    "# Находи вероятность ошибки первого рода\n",
+    "alpha = 1. - st.chi2.cdf(Z, n-1)\n",
+    "print('alpha = {:.3}'.format(alpha))"
    ]
   },
   {
@@ -763,6 +807,823 @@
     "else:\n",
     "    print('{:.2f}, H0'.format(p_val))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Примеры решения задач.\n",
+    "\n",
+    "Примеры решения задач из [Л.Н. Фадеева, А.В. Лебедев - теория вероятностей и математическая статистика.](https://drive.google.com/file/d/0BwulwquUtZ1KY21MenJwN1dUS0U/view) по теме проверки статистических гипотез.\n",
+    "\n",
+    "Примечание к стандартным задачам:\n",
+    "1. Мы можем искать квантиль, соответствующую ошибке, по которой определить критическое значение параметра и сравнить с тем коорый в альтернативе.\n",
+    "2. Мы можем искать квантиль, соответствующую ошибке, определить значение статистики критерия и сравнить с полученным значением квантили."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №6.\n",
+    "\n",
+    "Примечание: как находить ошибки I, II рода или мощности критериев.\n",
+    "\n",
+    "Для начало необходимо:\n",
+    "1. Найти значание статистики, соответствующее выбранной величине ошибки\n",
+    "2. Вычислить КРИТИЧЕСКОЕ ЗНАЧЕНИЕ выборочного среденего соответствующего значению этому статистики.\n",
+    "3. Вычислить величину статстики критерия, соответствующую полученному КРИТИЧЕСКОМУ ЗНАЧЕНИЮ выборочного среднего.\n",
+    "4. Найти накомпленную вероятность соответсвующую полученной величине статистики критерия."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "beta = 0.442\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = st.norm.ppf(0.05)\n",
+    "a0 = 15.\n",
+    "a1 = 17.\n",
+    "n = 9.\n",
+    "sigma = 4.\n",
+    "\n",
+    "x_ = z * sigma / np.sqrt(n) + a1\n",
+    "Z = (x_ - a0) / sigma * np.sqrt(n)\n",
+    "\n",
+    "beta = st.norm.cdf(Z)\n",
+    "print('beta = {:.3f}'.format(beta))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Примечание: для вычисления объема выорки необходимой для дочтижения ошибки I рода $\\alpha_{0}$ и ошибки II рода $\\beta_{0}$ необходимо:\n",
+    "1. Вычислить соответствующие ошибкам квантили.\n",
+    "2. Зная квантили выразить критические значения выборочного среднего в обоих случаях.\n",
+    "3. Составить неравенства (в зависимости от типа критерия: левосторонии, и.т.д.) в котором выборочное среденее ограничено полученнвми критическими значениями.\n",
+    "4. Выразить из полученного соотошения n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.730228928079082"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u08 = st.norm.ppf(0.8)\n",
+    "n = ((u08 - z) * sigma / (a1 - a0))**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №8."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.289707253902943"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 25.\n",
+    "sigma = 10.\n",
+    "x_ = 18.\n",
+    "alpha = 0.05\n",
+    "a0 = 16.\n",
+    "\n",
+    "z = st.norm.ppf(1. - alpha)\n",
+    "X_ = z * sigma / np.sqrt(n) + a0\n",
+    "X_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6387600313123355"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 = 20.\n",
+    "z_cr = (X_ - a1) / sigma * np.sqrt(n)\n",
+    "\n",
+    "beta = 1. - st.norm.cdf(z_cr)\n",
+    "beta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №9."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "308.22426813475738"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a0 = 300.\n",
+    "sigma = 50.\n",
+    "n = 100\n",
+    "alpha = 0.05\n",
+    "\n",
+    "\n",
+    "z = st.norm.ppf(1. - alpha)\n",
+    "X_ = z * sigma / np.sqrt(n) + a0\n",
+    "X_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.36123996868766622"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z = (X_ - 310.) / sigma * np.sqrt(n)\n",
+    "\n",
+    "beta = st.norm.cdf(Z)\n",
+    "beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.216937575746726"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha = 0.025\n",
+    "beta = 0.05\n",
+    "a2 = 320.\n",
+    "n = sigma**2*(st.norm.ppf(1. - alpha) - st.norm.ppf(beta))**2 / (a2- a0)**2\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "236.46818872817738"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p0 = 0.3\n",
+    "p1 = 0.2\n",
+    "alpha = 0.05\n",
+    "beta = 0.025\n",
+    "\n",
+    "ua = st.norm.ppf(alpha)\n",
+    "ub = st.norm.ppf(1. - beta)\n",
+    "\n",
+    "n = (ua * np.sqrt(p0*(1. - p0)) - ub * np.sqrt(p1 * (1. - p1)))**2 / (p0-p1)**2\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №11."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.00411213407\n",
+      "H1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a0 = 1.\n",
+    "sigma = 0.01\n",
+    "n = 16.\n",
+    "a1 = 1.01\n",
+    "alpha = 0.05\n",
+    "\n",
+    "u = st.norm.ppf(1. - alpha)\n",
+    "x_ = a0 + u * sigma / np.sqrt(n)\n",
+    "print(x_)\n",
+    "\n",
+    "if x_ < a1: print('H1')\n",
+    "else: print('H0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №12."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.94873793738\n",
+      "H1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a0 = 4.\n",
+    "sigma = 0.2\n",
+    "n = 25.\n",
+    "a1 = 3.88\n",
+    "alpha = 0.1\n",
+    "\n",
+    "u = st.norm.ppf(alpha)\n",
+    "x_ = a0 + u * sigma / np.sqrt(n)\n",
+    "print(x_)\n",
+    "\n",
+    "if a1 < x_: print('H1')\n",
+    "else: print('H0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №13."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1\n",
+      "H0\n",
+      "H1\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigma = np.array([0.05, 0.08, 0.09])\n",
+    "a0    = np.array([7., 5., 5.])\n",
+    "a1    = np.array([7.02, 5.01, 5.02])\n",
+    "n = 100.\n",
+    "alpha = 0.1\n",
+    "\n",
+    "ul = st.norm.ppf(alpha / 2.)\n",
+    "ur = st.norm.ppf(1. - alpha / 2.)\n",
+    "\n",
+    "x_l = a0 + sigma * ul / np.sqrt(n)\n",
+    "x_r = a0 + sigma * ur / np.sqrt(n)\n",
+    "\n",
+    "ans = np.logical_and(a1 > x_l, a1 < x_r)\n",
+    "for i in ans:\n",
+    "    if i == True: print('H0')\n",
+    "    else: print('H1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №14."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0\n",
+      "H1\n",
+      "H0\n",
+      "H1\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = np.array([150., 120., 120., 180.])\n",
+    "a0    = np.array([7320., 7779., 7530., 9514.])\n",
+    "a1    = np.array([7300., 7770., 7500., 9500.])\n",
+    "n = 400.\n",
+    "alpha = 0.05\n",
+    "\n",
+    "t = st.t.ppf(alpha, n-1)\n",
+    "x_ = a0 + t * s / np.sqrt(n)\n",
+    "\n",
+    "ans = a1 < x_\n",
+    "for i in ans:\n",
+    "    if i == True: print('H0')\n",
+    "    else: print('H1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №16."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 25.\n",
+    "a0 = 101.\n",
+    "a1 = 100.\n",
+    "s = 3.\n",
+    "alpha = 0.05\n",
+    "\n",
+    "t = st.t.ppf(alpha, n-1)\n",
+    "x_ = a0 + t * s / np.sqrt(n)\n",
+    "\n",
+    "if a1 < x_: print('H1')\n",
+    "else: print('H0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №17."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0\n",
+      "H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([40.1, 50.0, 49.7, 50.5, 48.2, 50.3, 49.7, 51.6, 49.6, 50.1, \\\n",
+    "              49.7, 48.8, 51.4, 49.1, 49.6, 50.9, 48.5, 52.0, 50.7, 50.6])\n",
+    "n = x.shape[0]\n",
+    "a0 = 50.\n",
+    "alpha = 0.1\n",
+    "\n",
+    "# Approach 1\n",
+    "tl = st.t.ppf(alpha/2., n-1)\n",
+    "tr = st.t.ppf(1. - alpha/2., n-1)\n",
+    "\n",
+    "x_ = np.mean(x)\n",
+    "s = np.sqrt( np.sum((x-x_)**2) / (n-1) )\n",
+    "t_cr = (x_ - a0) / s * np.sqrt(n)\n",
+    "\n",
+    "if t_cr > tl and t_cr < tr: print('H0')\n",
+    "else: print('H1')\n",
+    "\n",
+    "# Aproach 2\n",
+    "tl = st.t.ppf(alpha/2., n-1)\n",
+    "tr = st.t.ppf(1. - alpha/2., n-1)\n",
+    "\n",
+    "s = np.sqrt( np.sum((x-x_)**2) / (n-1) )\n",
+    "x_l = a0 + tl * s / np.sqrt(n)\n",
+    "x_r = a0 + tr * s / np.sqrt(n)\n",
+    "\n",
+    "if a0 > x_l and a0 < x_r: print('H0')\n",
+    "else: print('H1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №18."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1\n",
+      "H1\n",
+      "H0\n",
+      "H1\n",
+      "H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a0 = np.array([1020., 500., 1500., 300., 250.])\n",
+    "n  = np.array([30., 25., 25., 16., 16.])\n",
+    "x_ = np.array([1070., 530., 1506., 320., 254.])\n",
+    "s  = np.array([90., 30., 20., 15., 12.])\n",
+    "alpha = 0.05\n",
+    "\n",
+    "tr = st.t.ppf(1. - alpha, n-1)\n",
+    "t = (x_ - a0) / s * np.sqrt(n)\n",
+    "\n",
+    "for i in t < tr:\n",
+    "    if i: print('H0') \n",
+    "    else: print('H1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №19."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a0 = 500.\n",
+    "n = 25.\n",
+    "x_ = 520.\n",
+    "s = 40.\n",
+    "alpha = 0.1\n",
+    "\n",
+    "tr = st.t.ppf(1. - alpha, n-1)\n",
+    "t_cr = (x_ - a0) / s * np.sqrt(n)\n",
+    "\n",
+    "if t_cr < tr: print('H0')\n",
+    "else: print('H1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №20."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0 -> no\n",
+      "H0 -> no\n"
+     ]
+    }
+   ],
+   "source": [
+    "a0 = 90.\n",
+    "x = np.array([79.,74.,112.,95.,83.,96.,77.,84.,70.,90.])\n",
+    "n = x.shape[0]\n",
+    "alpha = 0.05\n",
+    "\n",
+    "\n",
+    "tl = st.t.ppf(alpha, n-1)\n",
+    "\n",
+    "# First approach\n",
+    "x_ = np.mean(x)\n",
+    "s = np.sqrt( np.sum((x-x_)**2) / (n-1) )\n",
+    "t = (x_ - a0) / s * np.sqrt(n)\n",
+    "\n",
+    "if t > tl: print('H0 -> no')\n",
+    "else: print('H1 -> yes')\n",
+    "    \n",
+    "# Second approach\n",
+    "x_l = a0 + tl * s / np.sqrt(n)\n",
+    "\n",
+    "if a0 > x_l: print('H0 -> no')\n",
+    "else: print('H1 - > yes')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №21."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1 -> yes\n",
+      "H0 -> no\n",
+      "H0 -> no\n",
+      "H1 -> yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "a0 = np.array([60., 50., 60., 80.])\n",
+    "n = np.array([25., 25., 16., 16.])\n",
+    "x_ = np.array([51., 48., 57., 76.])\n",
+    "s = np.array([6., 7., 9., 5.])\n",
+    "alpha = 0.05\n",
+    "\n",
+    "tl = st.t.ppf(alpha, n-1)\n",
+    "t = (x_ - a0) / s * np.sqrt(n)\n",
+    "\n",
+    "for i in tl < t:\n",
+    "    if i: print('H0 -> no') \n",
+    "    else: print('H1 -> yes')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №23."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1 -> yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 16.\n",
+    "a0 = 2500.\n",
+    "a1 = 2620.\n",
+    "s = 150.\n",
+    "alpha = 0.1\n",
+    "\n",
+    "tr = st.t.ppf(1- alpha, n-1)\n",
+    "x_r = a0 + tr * s / np.sqrt(n)\n",
+    "\n",
+    "if a1 < x_r: print('H0 -> no')\n",
+    "else: print('H1 -> yes')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №24."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1 -> yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 25.\n",
+    "a0 = 2500.\n",
+    "a1 = 2380.\n",
+    "s = 90.\n",
+    "alpha = 0.05\n",
+    "\n",
+    "tl = st.t.ppf(alpha, n-1)\n",
+    "x_l = a0 + tr * s / np.sqrt(n)\n",
+    "\n",
+    "if a1 > x_l: print('H0 -> no')\n",
+    "else: print('H1 -> yes')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №28."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0\n",
+      "H0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 17.\n",
+    "sigma0 = 0.18\n",
+    "s2 = 0.24\n",
+    "alpha = 0.05\n",
+    "\n",
+    "chi2_r = st.chi2.ppf(1. - alpha, n - 1)\n",
+    "\n",
+    "# First approach\n",
+    "z = (n-1)*s2 / sigma0\n",
+    "\n",
+    "if z < chi2_r: print('H0')\n",
+    "else: print('H1')\n",
+    "    \n",
+    "# Second approach\n",
+    "s2_cr = chi2_r * sigma0 / (n-1)\n",
+    "if s2 < s2_cr: print('H0')\n",
+    "else: print('H1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Задача №29."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1 -> no we could not\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigma0 = 2.\n",
+    "n = 20.\n",
+    "x = np.array([56., 58., 60., 62., 64.])\n",
+    "ni = np.array([1., 4., 10., 3., 2.])\n",
+    "alpha = 0.05\n",
+    "\n",
+    "p = ni / n\n",
+    "\n",
+    "x_ = np.sum(x*p) / n\n",
+    "s2 =  np.sum( ni*(x - x_)**2) / (n-1.)\n",
+    "\n",
+    "ch_l = st.chi2.ppf(alpha/2., n-1)\n",
+    "ch_r = st.chi2.ppf(1. - alpha/2., n-1)\n",
+    "\n",
+    "z = (n-1.)*s2 / sigma0\n",
+    "\n",
+    "if z > ch_l and z < ch_r: print('H0 -> we could')\n",
+    "else: print('H1 -> no we could not')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
