--- a/Machine Learning/Yandex_specialization/0_Math/math.ipynb
+++ b/Machine Learning/Yandex_specialization/0_Math/math.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,15 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Вектор x = [0.04695552 0.12961862 0.38531655]\n",
-      "Вектор y = [0.50470566 0.76200594 0.62445232]\n"
+      "Вектор x = [0.17061393 0.5590425  0.22002243]\n",
+      "Вектор y = [0.59397467 0.43969291 0.41582207]\n"
      ]
     }
    ],
@@ -138,15 +138,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l1 расстояние между векторами (numpy): 1.329\n",
-      "l1 расстояние между векторами (scipy): 1.329\n"
+     "ename": "NameError",
+     "evalue": "name 'norm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-d93a1063b962>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m print('l1 расстояние между векторами (numpy): {0}'.format(\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mord\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m ))\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'norm' is not defined"
      ]
     }
    ],
@@ -178,18 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l2 расстояние между векторами (numpy): 0.816\n",
-      "l2 расстояние между векторами (scipy): 0.816\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('l2 расстояние между векторами (numpy): {0}'.format(\n",
     "    round(norm(x - y, ord=2), 3)\n",
@@ -256,19 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Вектор: [0.04695552 0.12961862 0.38531655]\n",
-      "l1 норма вектора: 0.562\n",
-      "l2 норма вектора: 0.409\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Вектор: {0}'.format(x))\n",
     "print('l1 норма вектора: {0}'.format(round(norm(x, ord=1), 3)))\n",
@@ -304,17 +288,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Скалярное произведение векторов: 0.363\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Скалярное произведение векторов: {0}'.format(round(np.dot(x, y), 3)))"
    ]
@@ -335,23 +311,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Косинус угла между x и y: 0.802\n",
-      "Сам угол: 0.64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cos_angle = round(np.dot(x, y) / norm(x, ord=2) / norm(y, ord=2), 3)\n",
     "print('Косинус угла между x и y: {0}'.format(cos_angle))\n",
     "print('Сам угол: {0}'.format(round(np.arccos(cos_angle), 3)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1.])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array(\n",
+    "    [[1, 1],\n",
+    "    [1, 2]]\n",
+    ")\n",
+    "a.dot(a.T)\n",
+    "c=np.eye(4, 5)\n",
+    "c[[0, 3], [1, 3]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 1: сравнение предложений"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
