[ML] Math. Week 3. Non-gradient optimization.
Todo: task, notes, code for explainned methods.

--- a/Machine Learning/Yandex_specialization/0_Math/linal_grad.ipynb
+++ b/Machine Learning/Yandex_specialization/0_Math/linal_grad.ipynb
@@ -110,11 +110,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Методы оптимизации\n",
+    "\n",
+    "## Случайный поиск (hill climbing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Метод иммитации отжига"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Генетические алгоритмы"
+   ]
   }
  ],
  "metadata": {
