[Math Stat] Examples of tasks with point estimation (not significant).

--- a/Math Stat/2_point_estimation.ipynb
+++ b/Math Stat/2_point_estimation.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -53,6 +51,7 @@
     "### 2 Качества оценок.\n",
     "\n",
     "Но как понимать (в математическом смысле) приближенное равенство оценки $\\hat{\\theta}(X_{1},X_{2},...X_{n})$ и оцениваемой величины $\\theta$? \n",
+    "\n",
     "Можно, например исходя из каких-то свойств их функций распределения оценки (так как она является случайной величиной, так как это функция от вектора случайных величин - следовательно тоже случайная величина).\n",
     "\n",
     "**Пример** нахождения распределения случайной величины:\n",
@@ -73,17 +72,52 @@
     "Таким образом, выборочное среденее имеет распределение $\\bar{x}$~$N(a,\\sigma^{2}/n)$\n",
     "\n",
     "Но оказывается что функцию распределения оценки $\\hat{\\theta}(X_{1},..X_{n})$ не всегда можно построить.\n",
-    "Поэтому необходимы более простые критерии по которым можно будет судить о качестве оценки:\n",
+    "Поэтому необходимы более простые критерии по которым можно будет судить о качестве оценки.\n",
     "\n",
-    "- **Несмещенность**: Оценка $\\hat{\\theta}(X_{1}, ..., X_{n})$ называется несмещенной оценкой $\\theta$ если $E\\hat{\\theta}(X_{1}, ..., X_{n})=\\theta$, то есть математическое ожидание оценки равно оцениваемой величине. \n",
     "\n",
-    "**Пример**: \n",
+    "P.S. тут и далее введем обозначение $X_{[n]}=[X_{1}, \\dots, X_{n}]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1 Несмещенность\n",
+    "\n",
+    "**Опр**: \n",
+    "Точечная оценка $\\hat{\\theta}(X_{[n]})$ является несмещенной оценкой параметра $\\theta$ если математическое ожидание оценки равно оцениваемой величине для всех $\\theta \\in \\Theta$, или:\n",
+    "$$\n",
+    "    $E\\hat{\\theta}(X_{[n]})=\\theta$\n",
+    "$$\n",
+    "\n",
+    "**Опр**:\n",
+    "Точечная оценка $\\hat{\\theta}(X_{[n]})$ является асимптотически неспещенной оценкой параметра $\\theta$ если матоематическое ожидание оценки асимптотически равно оцениваемой величине для всех $\\theta \\in \\Theta$, те.:\n",
+    "$$\n",
+    "    E \\hat{\\theta}(X_{[n]}) \\, \\xrightarrow[n \\to \\infty] \\, \\theta\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Пример**:\n",
     "\n",
     "Выборочное среденее $\\bar{x}$ - несмещеная оценка параметра $\\lambda$ распределения Пуассона, т.к. $E\\bar{x}=EX=\\lambda$, то есть математическое ожидание выборочного среднего (оценки) равно параметру распределения (оцениваемая величина). \n",
     "\n",
-    "Выборочная дисперсия $s=\\frac{1}{n}\\sum_{i}^{n}(x_{i}-\\bar{x})^{2}$ не является несмещенной оценкой дисперсии нормального распределения. Несещенной оценкой является оценка вида: $s^{*}=n/(n-1)*s$. Еще примеры на стр 74. [Лагутенко](https://www.ozon.ru/context/detail/id/4620326/)\n",
+    "Выборочная дисперсия $s=\\frac{1}{n}\\sum_{i}^{n}(x_{i}-\\bar{x})^{2}$ не является несмещенной оценкой дисперсии нормального распределения. Несещенной оценкой является оценка вида: $s^{*}=n/(n-1)*s$. \n",
     "\n",
-    "- **Состоятельность**: Оценка $\\hat{\\theta}(X_{1}, ..., X_{n})$ называется состоятельной оценкой $\\theta$ если последовательность оценок $\\hat{\\theta_{n}}(X_{1}, ..., X_{n})$ сходится по вероятности к оцениваемой величине $\\theta$ при $n$ стремящимся в бесконечность: \n",
+    "\n",
+    "Еще примеры на стр 74. [Лагутенко](https://www.ozon.ru/context/detail/id/4620326/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Состоятельность\n",
+    "\n",
+    "**Опр**: Оценка $\\hat{\\theta}(X_{1}, ..., X_{n})$ называется состоятельной оценкой $\\theta$ если последовательность оценок $\\hat{\\theta_{n}}(X_{1}, ..., X_{n})$ сходится по вероятности к оцениваемой величине $\\theta$ при $n$ стремящимся в бесконечность: \n",
     "\n",
     "\\begin{equation*}\n",
     "    \\forall \\varepsilon >0: P(|\\hat{\\theta_{n}}(X_{1}, ..., X_{n}) - \\theta| > \\varepsilon) \\xrightarrow{P} 0\n",
@@ -97,21 +131,40 @@
     "Выборочное среденее $\\bar{x}$ - состоятельная оценка математического ожидания нормального распределения ~$N(a, \\sigma^{2})$, так как дисперсия выборочного среденего (см. ранее) $D\\bar{x}=\\sigma^{2}/n$ и по неравенству Чебышева можно получить оценку:\n",
     "\\begin{equation*}\n",
     "P(|X-a|>\\varepsilon)=\\frac{DX}{\\varepsilon^{2}}=\\frac{\\sigma^{2}}{n\\varepsilon^{2}} \\xrightarrow[n \\rightarrow \\infty]{} 0,\n",
-    "\\end{equation*}\n",
+    "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3 Эффективность\n",
     "\n",
-    "- **Эффективность**: Оценка $\\hat{\\theta^{*}}(X_{1}, ..., X_{n})$ называется эффективной на некотром классе оценок $K$ (фиксирован рамер выборки, и смотрим строим все возможные точечные оценки), если:\n",
+    "**Опр**: Оценка $\\hat{\\theta^{*}}(X_{1}, ..., X_{n})$ называется эффективной на некотром классе оценок $K$ (фиксирован рамер выборки, и смотрим строим все возможные точечные оценки), если:\n",
     "\n",
     "\\begin{equation*}\n",
     "E(\\hat{\\theta^{*}}(X_{1}, ..., X_{n})-\\theta)^{2} < E(\\hat{\\theta}(X_{1}, ..., X_{n})-\\theta)^{2} \\quad \\forall \\hat{\\theta}(X_{1}, ..., X_{n}) \\in K\n",
     "\\end{equation*}\n",
     "\n",
-    "Эффективной оценкой является та статистика, которая обращает неравенсво Крао-Рамера в равенство (на ограниченность снизу дисперсии). стр. 114 [Лагутенко](https://www.ozon.ru/context/detail/id/4620326/).\n",
+    "Эффективной оценкой является та статистика, которая обращает неравенсво Крао-Рамера в равенство (на ограниченность снизу дисперсии). стр. 114 [Лагутенко](https://www.ozon.ru/context/detail/id/4620326/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.4. Ассимптотическая нормальность\n",
     "\n",
-    "**НАПИСАТЬ ПРО НЕГО**\n",
+    "**Опр**:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.4. Робастность\n",
     "\n",
-    "- **Нормальность**: \n",
-    "\n",
-    "- **Робастность**:\n"
+    "**Опр**:"
    ]
   },
   {
@@ -418,21 +471,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
