[ML] NN workflow description. V1. (Update is necessary).

--- a/Machine Learning/Create your own NW/sigma_nw.ipynb
+++ b/Machine Learning/Create your own NW/sigma_nw.ipynb
@@ -12,6 +12,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Процесс.\n",
+    "\n",
+    "Допустим у нас трехслойная нейронная сеть, со слоями соответственно $input \\rightarrow hidden \\rightarrow output$.\n",
+    "\n",
+    "В процессе обучения выделяют следующие шаги.\n",
+    "\n",
+    "1. Прямой проход (суммирование всех взвешенных input-ов). Получаем промежуточный output.\n",
+    "$$\n",
+    "    o_{hid} = W_{inp, hid} \\times I_{inp}, \\\\\n",
+    "    o_{out} = W_{hid, out} \\times I_{hid}\n",
+    "$$\n",
+    "\n",
+    "2. Применяем функцию активации к каждому из промежуточных output-ов.\n",
+    "$$\n",
+    "    o_{hid} = sigm(W_{inp, hid} \\times I_{inp}), \\\\\n",
+    "    o_{out} = sigm(W_{hid, out} \\times I_{hid})\n",
+    "$$\n",
+    "\n",
+    "3. Вычисление ошибки предсказания на output слое (используем квадратичную ошибку).\n",
+    "$$\n",
+    "    E_{out} = (expect_{out} - o_{out})^{2}\n",
+    "$$\n",
+    "\n",
+    "4. Обратное распростронение ошибки (вычисление ошибки для hidden слоя)\n",
+    "$$\n",
+    "    E_{hid} = W_{hid, out}^{T} \\times E{out}\n",
+    "$$\n",
+    "\n",
+    "P.S. Oшибка каждого узла делится пропорционально весам, входящим в данный. Мы просто не нормируем на сумму всех весов по столбцу, так как это не особо важно.\n",
+    "\n",
+    "5. Обновление весовых коэффициентов.\n",
+    "$$\n",
+    "    W_{hid, out} = W_{hid, out} - \\alpha \\frac{\\partial E_{out}}{\\partial W_{hid, out}}, \\\\\n",
+    "    W_{inp, hid} = W_{inp, hid} - \\alpha \\frac{\\partial E_{hid}}{\\partial W_{inp, hid}}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Распишем последний пункт конкретно для нашей ситуации (квадратичная ошибка, функция активации - сигмиоида).\n",
+    "$$\n",
+    "    \\frac{\\partial \\; E_{out}}{\\partial w_{hid, out}} = \n",
+    "    \\frac{\\partial \\; E_{out}}{\\partial o_{out}} \\times \\frac{\\partial \\; o_{out}}{\\partial w_{hid, out}},\n",
+    "$$\n",
+    "\n",
+    "Но ввиду (см. ранее $E_{out}$):\n",
+    "$$\n",
+    "    \\frac{\\partial \\; E_{out}}{\\partial o_{out}} = -2 \\times (expect_{out} - o_{out}),\n",
+    "$$\n",
+    "\n",
+    "И кроме того ввиду (см. ранее $o_{out}$ и учитывая что $sigm(x)' = sigm(x) \\times (1 - sigm(x))$), \n",
+    "$$\n",
+    "    \\frac{\\partial \\; o_{out}}{\\partial w_{hid, out}} = \n",
+    "    sigm(W_{hid, out} \\times I_{hid}) \\times (1 - sigm(W_{hid, out} \\times I_{hid})) * o_{hid}\n",
+    "$$\n",
+    "\n",
+    "P.S. Последнее слагаемое получается по правилу дифференцирования сложной функции.\n",
+    "\n",
+    "Таким образом:\n",
+    "\n",
+    "$$\n",
+    "    \\frac{\\partial \\; E_{out}}{\\partial w_{hid, out}} = -2 \\times (expect_{out} - o_{out}) \\times \n",
+    "    sigm(W_{hid, out} \\times I_{hid}) \\times (1 - sigm(W_{hid, out} \\times I_{hid})) * o_{hid}\n",
+    "$$ \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -32,10 +100,11 @@
     "        \n",
     "        self.lr = learning_rate\n",
     "        \n",
-    "        # Set weights between input and hidden layers\n",
     "        # Задаются как выборка из нормального распределения с центром в нуле, и мат. ожиданием равным\n",
     "        # 1. / (корень квадратный из количества узлов)\n",
+    "        # Weights between input and hidden layers\n",
     "        self.wih = np.random.normal(0.0, pow(self.hnodes, -0.5), (self.hnodes, self.inodes))\n",
+    "        # Weights between hidden and output layers\n",
     "        self.who = np.random.normal(0.0, pow(self.onodes, -0.5), (self.onodes, self.hnodes))\n",
     "        \n",
     "        # Activation function\n",
@@ -171,21 +240,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
